grabo antes de entregar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Te invitamos a sumergirte en una historia de amor y relato de nuestro día de bodas soñado, donde esperamos inspirarte para que puedas proyectar
         los momentos de tu vida más importantes volcados en un sitio web.">
         <meta name="keywords" content="boda, amor, historia, casamiento, juntos, matrimonio">
-        <title> S&S Boda-Inicio </title>
+        <title> S&S boda página oficial -Inicio </title>
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="shortcut icon" href="./assets/images/heart-svgrepo-com (1).svg" type="image/png" />
         <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -53,13 +53,13 @@
                 <div class="titulos bg-body rounded"> </div> 
                 <h1 class="tituloprincipal my-1"> SOFIA Y SEBASTIAN </h1>
                 <h2 class="texto-n my-4 fs-1 animate__animated animate__swing animation-duration: 2s;"> Nuestra boda </h2> 
-                   <p class="intro my-3 shadow-lg p-3 mb-5 bg-body rounded"> Te invitamos a recorrer juntos nuestra soñada boda </p>
-                   <p class="casamiento my-1 d-flex justify-content-center ">Los mismos sueños que uno anhela y espera ese día especial, la espera de nuestro gran día al fin finalizo.
-                    y por eso pretendemos sumergirlos un Ratito en nuestra historia y nuestra Experiencia con esta Página. 
-                    Con el fin de narrarles y que ustedes puedan interactuar con nosotros, Conocernos y que puedan ver
-                    una linda historia que queda grabada en los corazones, en la memoria y en esta pagina para nuestros queridos espectadores. 
-                    Comentarles sobre nosotros y nuestros afectos, nuestros deseos y nuestra gran felicidad, 
-                    que sepan nuestra visión del matrimonio y que puedan atesorar tanto como nosotros esta experiencia.</p> 
+                   <p class="intro my-3 shadow-lg p-3 mb-5 bg-body rounded rounded-pill"> Te invitamos a recorrer juntos nuestra soñada boda </p>
+                   <p class="casamiento my-1 d-flex justify-content-center ">Aquel día especial, un nuevo comienzo, la espera finalizó.
+                    Por eso pretendemos sumergirlos en nuestra historia con esta Página. 
+                    Con el fin de narrarles y que ustedes puedan interactuar con nosotros, conocernos, que puedan ver
+                    una linda historia que quedará grabada en los corazones, en la memoria y en esta página para nuestros queridos espectadores. 
+                    Comentarles sobre nuestros deseos y nuestra gran felicidad, 
+                    que sepan nuestra visión del matrimonio y que puedan disfrutar tanto como nosotros cada párrafo.</p> 
                 <br>
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                   <div class="col">
@@ -90,7 +90,7 @@
                     <div class="card">
                       <img class="mover" src="./assets/images/bodaj.jpg" class="card-img-top" alt="ramodenovia.jpg" loading="lazy">
                       <div class="card-body">
-                        <h3 class="card-title">Sonriendo juntos y para siempre. </h3>
+                        <h3 class="card-title">Sonriendo juntos y para siempre... </h3>
                       </div>
                     </div>
                   </div>
