--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Nuestro contacto para que puedas ayudarnos en este hermoso viaje que es el amor,
     con nuestra luna de miel soñada, gracias a cada uno por su esmero.">
     <meta name="keywords" content="contacto, luna de miel, viaje, deseos, buenas vibras">
-    <title>S&S Boda-Contacto</title>
+    <title>S&S boda página oficial-Contacto</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -52,10 +52,10 @@
               <div class="titulos bg-body rounded"> </div> 
               <h1 class="tituloprincipal my-1"> CONTACTO </h1>
               <h3 class="textoregalo fs-1 animate__animated animate__swing animation-duration: 2s; my-5 h2 display-4 font-italic "> Regalo de Bodas </h3>
-              <h2 class="textob my-3 fs-3"> Buzon de Felicitaciones </h2>
-              <p class="P my-2 font-italic font-weight-norma">Sin compromisos ,si algo nos quieren regalar en efectivo lo sabremos apreciar. 
+              <h2 class="textob my-3 fs-3"> Buzón de Felicitaciones </h2>
+              <p class="P my-2 font-italic font-weight-norma">Sin compromisos ,si algo nos quieren regalar, en efectivo lo sabremos apreciar. 
                     Les dejamos un Botón de suscripción, para quienes deseen 
-                    que les enviemos por e-mail los datos bancarios para colaborar con nuestra Luna de Miel.
+                    que le enviemos por e-mail nuestros datos bancarios para colaborar con la Luna de Miel.
                     Gracias por su presencia en este día tan Especial.</p>
                           <form  action="./error.html" method="post" class="row g-3 my-4"> 
                               <div class="mb-3 shadow p-3 mb-5 bg-body rounded ">
