--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Una galería con fotos especiales elegidas por nosotros con mucho amor, para que puedas disfrutar un
     poquito nuestra alegría ese día y apreciar juntos los momentos llenos de amor y gratitud">
     <meta name="keywords" content="galeria, fotos de boda, fotos civil, boda al aire libre, ceremonia">
-    <title>S&S Boda-Galeria</title>
+    <title>S&S boda página oficial-Galeria</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -50,8 +50,8 @@
             <div class="titulos bg-body rounded"> </div> 
             <h1 class="tituloprincipal my-1"> GALERÍA </h1>
             <p class="texto-boda my-2 fw-bolder">
-            Esperamos que puedan disfrutar de un breve paseo en imagenes de el día de nuestra boda, 
-            Con mucho amor seleccionamos estas imágenes para que disfruten.
+            Esperamos que puedan disfrutar de un breve paseo por imágenes de el día de nuestra boda. 
+            Con mucho amor seleccionamos estas postales para que disfruten.
             </p>
             <hr class="featurette-divider">
       <section class="galeria justify-content-around my-4">  
