--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,7 @@
     <meta name="description" content="El día de nuestra boda, como fue, donde sucedió, en que predio,
     y mucho mas para que puedas encontrar en esta pestaña.">
     <meta name="keywords" content="nosotros, amor de pareja, opiniones, contexto, juntos por siempre">
-    <title>S&S Boda -Nosotros</title>
+    <title>S&S boda página oficial -Nosotros</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -65,17 +65,18 @@
                   dos veces la fecha y que pasaran dos largos años.</p>  
                 </p>
             </div>
+            <h2 class="cuando my-4 fs-2 fw-bold d-flex justify-content-center bg-p text-muted ">¡Vamos a conocernos! </h2> 
             <div class="container-fluid1 my-3">
-                <div class="row my-3">
+                <div class="row my-2">
                      <div class="col-md-6 col-sm-12">
                        <img class="fotografias rounded-circle my-3" src="../assets/images/nosotros2" alt="sofia" loading="lazy">
                      </div>
                      <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h2 class="s my-2 animate__animated animate__pulse animate__infinite "> SOFIA </h2>
+                            <h2 class="s my-2 animate__animated animate__pulse animate__infinite"> SOFIA BORSATO </h2>
                         <p class="sofia"> Como relatante de esta historia quiero presentarme, 
-                            tengo 27 años, vivo en la cuidad de Villa María provincia de Córdoba.
-                            Soy una persona que le gusta la simpleza y
+                            tengo 27 años, vivo en la cuidad de Villa María provincia de Córdoba, pero mi natalidad es Santafecina.
+                            Soy una persona que ama la simpleza y
                             disfrutar de los pequeños momentos en familia,que es mi mayor tesoro.</p>
                         </div>
                      </div>
@@ -89,10 +90,10 @@
                  </div>
                  <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                     <div>
-                        <h2 class="s animate__animated animate__pulse animate__infinite"> SEBASTIAN </h2>
+                        <h2 class="s animate__animated animate__pulse animate__infinite"> SEBASTIAN ZENOBI</h2>
                         <p class="sofia my-2"> 
                         Tengo 28 años, vivo en la cuidad de Villa María provincia de Córdoba,
-                        esperamos ansiosos la llegada de nuestra bebita. 
+                        esperamos ansiosos la llegada de nuestra bebita Sara. 
                         Mi personalidad es ser muy perspicaz,soy una persona muy activa.
                         Disfrutar,cuidar de mi familia, y ser muy servicial con las personas es lo que me caracteriza.
                         </p>
