--- a/pages/error.html
+++ b/pages/error.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="página de error 404">
     <meta name="keywords" content="error, error404, boda, retorno, Volver">
-    <title>S&S Boda-Error 404</title>
+    <title>S&S boda página oficial-Error 404</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
+    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -17,7 +17,7 @@
         <img src="../assets/images/corazonroto.png" alt="corazonroto.jpg" loading="lazy" width="30" height="24"></a>
     </header>
     <main>
-       <h1 class="tituloprincipal">ERROR 404</h1>
+       <h1 class="tituloprincipal"> ¡UPS! ERROR 404</h1>
        <h2 class="titulos">Disculpe las molestias</h2>
        <a class="intro" href="../index.html">Volver a página principal </a> 
        <img class="fotografias rounded-circle my-3" src="../assets/images/fotosofi.jpg.jpg" alt="bodasofiredonda" loading="lazy">
@@ -33,6 +33,5 @@
         Copyright 2022 - Desarrollado por Borsato Sofia
         </div>
     </footer>
-    
 </body>
 </html>
