pagina de error funcionando

--- a/pages/error.html
+++ b/pages/error.html
@@ -14,6 +14,9 @@
 </head>
 <body>
     <header>
+      <div class="logo">
+        <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
+      </div> 
         <img src="../assets/images/corazonroto.png" alt="corazonroto.jpg" loading="lazy" width="30" height="24"></a>
     </header>
     <main>
